--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
     </style>
 </head>
 <body>
+  <div class="moving-box"></div>
+<div class="moving-box"></div>
+<div class="moving-box"></div>
+<div class="moving-box"></div>
 
     <div class="menu-container">
         <h2 class="menu-title">TienHoang Configuration App</h2>
@@ -149,6 +153,9 @@
             alert("Cấu hình đã được áp dụng!!");
         }
     </script>
+<audio id="beep-sound" src="https://www.soundjay.com/button/flick-beep.wav"></audio>
 
+    
+    <script src="script.js"></script>
 </body>
 </html>
