--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             console.log("Cấu hình đã chọn:", config);
             alert("Cấu hình đã được áp dụng!");
         }
+        <script src="script.js"></script>
     </script>
 </body>
 </html>
