--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TienHoang Configuration App</title>
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -143,7 +143,7 @@
         function buffDPI() {
             let dpi = prompt("Nhập DPI:");
             if (dpi) {
-                alert("DPI được buff!!");
+                alert("DPI được buff là: " + dpi);
             } else {
                 alert("Bạn chưa nhập DPI!");
             }
@@ -163,7 +163,7 @@
             console.log("Cấu hình đã chọn:", config);
             alert("Cấu hình đã được áp dụng!");
         }
-        <script src="script.js"></script>
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
